# hexlet-django-blog

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: forms.py  models.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py
hexlet_django_blog/templates/: about.html  base.html  confirm_delete.html  form.html  index.html
hexlet_django_blog/templates/article/: comment.html  create.html  delete.html  index.html  show.html  update.html
