[tool.poetry]
name = "hexlet-django-blog"
version = "0.1.0"
description = ""
authors = ["Mikhail Orlov <crazyminer398@gmail.com>"]
packages = [
  { include = "hexlet_django_blog" },
]

[tool.poetry.scripts]
hexlet-django-blog = "hexlet_django_blog.app:main"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.1"
django-bootstrap4 = "^22.3"
gunicorn = "^20.1.0"
Django = "3.2.3"
importlib-metadata = "^6.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
